Prevent button squishing

--- a/src/components/ObjectView.module.css
+++ b/src/components/ObjectView.module.css
@@ -40,4 +40,5 @@
 }
 .grid > span > :not(input) {
     flex-grow: 0;
+    width: max-content;
 }
